2014-05-25  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.cpp: 

2014-05-25  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.h:
	* Proto.cpp:
	* X3DBrowser.h:
	* X3DScene.h:
	* X3DBaseNode.cpp:
	* X3DBrowser.cpp:
	* Loader.cpp:
	* Notification.cpp:
	* X3DBaseTool.h:
	* ExternProto.cpp:
	* X3DBrowserContext.h:
	* X3DToolObject.cpp:
	* X3DBrowserContext.cpp:
	* Script.h:
	* Inline.h:
	* X3DExecutionContext.h:
	* Script.cpp:
	* RenderingProperties.cpp:
	* Anchor.cpp:
	* Inline.cpp:
	* X3DBindableNode.h:
	* X3DExecutionContext.cpp:
	* X3DBindableNode.cpp:
	* jsContext.h:
	* jsContext.cpp:
	* jsBrowser.cpp:
	* X3DTimeDependentNode.h:
	* X3DPrototypeInstance.cpp:
	* X3DTimeDependentNode.cpp:
	* ParticleSystem.h:
	* ParticleSystem.cpp:
	* X3DPointingDeviceSensorNode.cpp: 

2014-05-24  Holger Seelig  <holger.seelig@yahoo.de>

	* jsContext.h:
	* jsContext.cpp: 

2014-05-24  Holger Seelig  <holger.seelig@yahoo.de>

	* jsContext.cpp: 

2014-05-24  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* X3D.h:
	* libtitania-x3d.cproj:
	* Fields.h:
	* X3DPtr.h:
	* FieldSet.h:
	* Route.cpp:
	* FieldPtr.h:
	* FieldSet.cpp:
	* X3DWeakPtr.h:
	* FieldArray.h:
	* FieldContainer.h:
	* NamedNode.cpp:
	* FieldContainer.cpp:
	* ImportedNode.cpp:
	* ExportedNode.cpp:
	* jsContext.h:
	* jsContext.cpp: 

2014-05-24  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* X3DBase.h:
	* Route.h:
	* X3DPtr.h:
	* SFNode.h:
	* Route.cpp:
	* X3DWeakPtr.h:
	* X3DBaseNode.h:
	* X3DBaseTool.h:
	* X3DExecutionContext.h:
	* X3DExecutionContext.cpp: 

2014-05-23  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBaseNode.h:
	* X3DBaseNode.cpp:
	* X3DToolObject.cpp:
	* Inline.cpp: 

2014-05-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* X3DConstants.h:
	* X3DBaseNode.h:
	* X3DBaseNode.cpp:
	* NodeTypeArray.h:
	* Generator.h:
	* NodeTypeArray.cpp:
	* Generator.cpp:
	* BasicNodeTypeArray.h:
	* X3DNode.cpp:
	* BasicNodeTypeArray.cpp: